--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
   firebase_storage: ^11.6.10
+  image_picker: ^1.0.0
   # Add other Firebase products as needed
 
   # The following adds the Cupertino Icons font to your application.
